More work on DigiCDC

--- a/0005-2019-12-05.md
+++ b/0005-2019-12-05.md
@@ -94,7 +94,7 @@ Anyway, my test code is in [02-trinket2].
     *   It requires that Arduino IDE is installed, but besides that it seems to work quite well.
     *   Hit <kbd>F1</kbd> and type `arduino` to see several of the common Arduino functions, including the Board Manager which picks up my existing config from the Arduino IDE (i.e. it recognises that I have `Digistump` installed).
     *   It was able to verify a sketch (try <kbd>F1</kbd> &rarr; `ardver`), with a bit of delay and figuring things out.
-    *   It did *not* recognise my libraries straight away (e.g. `TriketKeyboard`), though it was still able to verify/compile. It highlights `#include <TrinketKeyboard.h>` with an error saying that `includePath` needs to be updated. Clicking on this brings up a lightbulb icon which, when clicked, gives an `Edit includePath` option. This goes specifically to C/C++ extension settings. `Include path` already includes a couple of Arduino options, but I know otherwise that my added libraries should be found by:
+    *   It did *not* recognise my libraries straight away (e.g. `TrinketKeyboard`), though it was still able to verify/compile. It highlights `#include <TrinketKeyboard.h>` with an error saying that `includePath` needs to be updated. Clicking on this brings up a lightbulb icon which, when clicked, gives an `Edit includePath` option. This goes specifically to C/C++ extension settings. `Include path` already includes a couple of Arduino options, but I know otherwise that my added libraries should be found by:
         ```
         C:\Users\admin\Documents\Arduino\libraries\**
         ```
