Some minor notes on more Blender stuff

--- a/0008-2019-12-18.md
+++ b/0008-2019-12-18.md
@@ -165,7 +165,7 @@ Now, I've started [02-control], for providing commands (with feedback) for switc
 ## Other things to look into
 
 *   There's a nice little implementation of DigiCDC offering a CLI of sorts, called [DigiOS](https://github.com/jaromaz/DigiOS).
-*   I'd like to learn more about how to use the [Intel AMT / Intel Management Engine](https://www.howtogeek.com/56538/how-to-remotely-control-your-pc-even-when-it-crashes/) features of the Lenovo desktop PC I'm using for OctoPrint.
+*   I'd like to learn more about how to use the [Intel AMT / Intel Management Engine](https://www.howtogeek.com/56538/how-to-remotely-control-your-pc-even-when-it-crashes/) features of the Lenovo desktop PC I'm using for OctoPrint. Note that Linux reports the system to be: `# System: LENOVO 7483RY2 [ThinkCentre M58p]`
 *   It might be possible to buy a USB PID (not VID) from [here](https://www.mcselec.com/index.php?page=shop.product_details&product_id=92&option=com_phpshop) for &euro;18.99.
 *   Some technical details about what CDC is, [here](http://www.recursion.jp/prose/avrcdc/driver.html#protocol).
 *   Interesting thing [here](https://answers.microsoft.com/en-us/windows/forum/all/invalid-configuration-descriptor-prevents-usb/f711f8dd-23ec-4f58-86ff-c722b015a121) mentioning `usbtrace`.
