0026: Starting to explore XC9572XL breakout board from Dangerous Prototypes

--- a/0023-2020-05-29.md
+++ b/0023-2020-05-29.md
@@ -63,3 +63,4 @@ Shopping list for future:
 *   Better holding/mounting. Can 3D printing help? Soft teflon/silicon grippers?
 *   Side cutters
 *   Better test clip looms
+*   Proper bench-top power supply. Ideally one that can deliver 12V, 5V, 3.3V, and has current limiting (i.e. to avoid burning out a device that has a short).
