0026: Got XC9572XL programming via Bus Pirate reprogrammed as XSVF player

--- a/0026-2020-06-06.md
+++ b/0026-2020-06-06.md
@@ -101,12 +101,174 @@ I'm going to test out my Dangerous Prototypes XC9572XL board before I try assemb
 
 ## "Burning" the XC9572XL
 
+### Bus Blaster and UrJTAG trouble with XC9572XL specifically
+
+*   DP [Bus Blaster method of programming](http://dangerousprototypes.com/docs/CPLD_programming_with_Bus_Blaster,_urJTAG,_and_SVF_files) using [UrJTAG](http://urjtag.sourceforge.net/) reportedly doesn't work properly with XC9572XL due to a [UrJTAG bug related to timing](http://dangerousprototypes.com/forum/index.php?topic=4732.msg46032#msg46032).
+*   Instead of using Bus Blaster, loading the Bus Pirate with the XSVF player firmware [is recommended instead](http://dangerousprototypes.com/forum/index.php?topic=3575.0).
+*   Some specific mention of the issue [here](https://sourceforge.net/p/urjtag/mailman/message/27458651/). Supporting findings [here](https://urjtag-development.narkive.com/ef6CHsLA/svf-programming-error-with-xc9572xl-stepping-1).
+*   See an [alternative way](http://dangerousprototypes.com/forum/index.php?topic=5076.0) of programming XC9572XL using Bus Blaster using [xc3sprog](http://xc3sprog.sourceforge.net/guide.php). This might require a Linux VM with USB pass-through for the Bus Blaster. **NOTE,** however, that this utility uses JEDEC (`.jed`) files instead of (X)SVF...? It's further mentioned [here](https://github.com/dergraaf/loa/blob/master/fpga/jtag.markdown#xc3sprog) but not sure how relevant it is.
+*   Programming with Xilinx ISE is apparently another alternative, but could be complicated without the right hardware/cable.
+*   Someone did a [write-up of the problems](https://oshablue.com/bsides/2019/01/24/ubuntu-urjtag-ise-webpack-bus-blaster-v2-5-bb-xc9572xl-oops-i-mean-xc2c64a-coolrunner-ii-mini-dev-board/) they were having with all this in Jan 2019. Might be helpful to follow along. Since Jan 2019, there has been a (major?) new version of [UrJTAG](http://urjtag.org/) (going from 2018.09 to 2019.12)... maybe it has a fix?
+
+### Trying out Bus Pirate with the XSVF player
+
+[This page](http://dangerousprototypes.com/docs/Bus_Pirate_JTAG_XSVF_player) describes the overall concept and process.
+
+NOTE: I've got BP firmware 4.4, which is good because v4+ firmware makes a few things easier.
+
+1.  [Download `BPv3.XSVFplayer.v1.1.zip`](https://storage.googleapis.com/google-code-archive-downloads/v2/code.google.com/the-bus-pirate/BPv3.XSVFplayer.v1.1.zip) (referenced on [this page](https://code.google.com/archive/p/the-bus-pirate/downloads)).
+2.  Plug in the Bus Pirate v3.5, and make sure its hooks are not attached to anything.
+3.  Take note of the BP serial port (`COM13` in my case).
+4.  Connect to the BP serial port and make sure you're in HiZ mode; issue command `m1` if necessary.
+5.  Trigger the bootloader by issuing the command: `$`
+6.  Close the serial connection.
+7.  Extract `BPv3.XSVFplayer.v1.1.zip`
+8.  Run `BusPirate-firmware\ds30 Loader GUI.exe`
+9.  Make sure your COM port is selected.
+10. For `Hex-file`, locate `bpv3-xsvf-vb.hex`
+11. Click the `Download` button. Don't try to interact with the app while it's writing the flash: I found it interrupted it and caused an error. I was able to retry the `Download` button, though, and it succeeded:
+    ```
+    Initiating download...
+        Searching for bl . 
+        Found PIC24FJ64GA002 fw ver. 1.0.2
+        Waiting for bootloader to be ready...ok
+        Writing flash...ok
+        Download finished
+        Tx 65.2kB / Rx 382 bytes / 12.3s
+    ```
+12. Exit the ds30 Loader GUI and unplug the BP's USB.
+13. Plug the BP back in.
+14. With this firmware, the 5V and 3.3V PSUs should be on by default. Verified with DMM.
+15. Unplug BP again.
+16. Connect BP to XC95 JTAG header per [this](http://dangerousprototypes.com/docs/Bus_Pirate_JTAG_XSVF_player#Connections), plus 3.3V hook connected to `VTG`.
+17. Plug in the BP and verify the XC95 still works (i.e. pushbutton toggling LEDs).
+
+NOTE: To put back the original 6.1 firmware:
+
+1.  Download [`BusPirate.package.v6.1.zip`](https://storage.googleapis.com/google-code-archive-downloads/v2/code.google.com/dangerous-prototypes-open-hardware/BusPirate.package.v6.1.zip) (referenced on [this page](https://code.google.com/archive/p/dangerous-prototypes-open-hardware/downloads)).
+2.  It might be necessary to start the BP in bootloader mode by using the [jumper trigger method](http://dangerousprototypes.com/docs/Ds30_Loader_GUI#Step_1._Trigger_the_bootloader), but I'm not sure.
+
+Now to try programming the XC95...
+
+From command-line, within the extracted `BPv3.XSVFplayer.v1.1` directory, run:
+```batch
+BPXSVFplayer.exe -p COM13 -s 115200 -f xc95prog.xsvf
+```
+
+The first time I tried, **I got this error:**
+
+    D:\FPGA\BPv3.XSVFplayer.v1.1>BPXSVFplayer.exe -p COM13 -f xc95prog.xsvf
+    -----------------------------------------------------------------------------
+
+     BusPirate XSVF Player V.01
+     http://www.dangerousprototypes.com
+
+    -----------------------------------------------------------------------------
+    File is 53289 bytes, read 53289 bytes Opening Bus Pirate on COM13 at 115200bps, using XSVF file xc95prog.xsvf
+     Entering XSVF Player Mode
+     Waiting for first data request...ok
+    Sending 4096 Bytes (1000)...ok
+    End of operation reply 03
+      Device did not respond: XSVF_ERROR_MAXRETRIES
+     Thank you for Playing! :-)
+
+This error shouldn't happen. I was using the BP hooks, and it was a mess, so I unplugged the BP from USB, and tried switching to Dupont wires. The first time I tried after plugging back in, it hung here:
+
+    File is 53289 bytes, read 53289 bytes Opening Bus Pirate on COM13 at 115200bps, using XSVF file xc95prog.xsvf
+     Entering XSVF Player Mode
+     Waiting for first data request... waiting for reply...
+
+I unplugged the USB again, applied pressure to the Dupont wires, plugged the USB back in, and ran again, and this time it worked:
+
+    D:\FPGA\BPv3.XSVFplayer.v1.1>BPXSVFplayer.exe -p COM13 -f xc95prog.xsvf
+    -----------------------------------------------------------------------------
+
+     BusPirate XSVF Player V.01
+     http://www.dangerousprototypes.com
+
+    -----------------------------------------------------------------------------
+    File is 53289 bytes, read 53289 bytes Opening Bus Pirate on COM13 at 115200bps, using XSVF file xc95prog.xsvf
+     Entering XSVF Player Mode
+     Waiting for first data request...ok
+    Sending 4096 Bytes (1000)...ok
+    Sending 4096 Bytes (2000)...ok
+    Sending 4096 Bytes (3000)...ok
+    Sending 4096 Bytes (4000)...ok
+    Sending 4096 Bytes (5000)...ok
+    Sending 4096 Bytes (6000)...ok
+    Sending 4096 Bytes (7000)...ok
+    Sending 4096 Bytes (8000)...ok
+    Sending 4096 Bytes (9000)...ok
+    Sending 4096 Bytes (A000)...ok
+    Sending 4096 Bytes (B000)...ok
+    Sending 4096 Bytes (C000)...ok
+    Sending 4096 Bytes (D000)...ok
+    Sending 41 Bytes (D029)...ok
+    End of operation reply 00
+      Success!
+     Thank you for Playing! :-)
+
+NOTE: During programming, the `D1` and `D2` LEDs go dim. I'm not sure why: I thought they would go Hi-Z.
+
+After this, the button toggling worked again.
+
+I then downloaded, programmed, and tested each of these in turn (all from [here](https://github.com/DangerousPrototypes/CPLD_Breakout/tree/master/package/Tutorials/xc9572xl)), verifying that they indeed worked as expected:
+
+*   [`Verilog-CPLDintro1LEDon.xsvf`](https://github.com/DangerousPrototypes/CPLD_Breakout/blob/master/package/Tutorials/xc9572xl/Verilog-CPLDintro1LEDon.xsvf)
+*   [`Verilog-CPLDIntro2Ledbutton.xsvf`](https://github.com/DangerousPrototypes/CPLD_Breakout/blob/master/package/Tutorials/xc9572xl/Verilog-CPLDIntro2Ledbutton.xsvf)
+*   [`Verilog-CPLDIntro3LEDinverse.xsvf`](https://github.com/DangerousPrototypes/CPLD_Breakout/blob/master/package/Tutorials/xc9572xl/Verilog-CPLDIntro3LEDinverse.xsvf)
+
+The final one ends up being the same as the demo that comes pre-loaded.
+
+
+#### Other notes:
+
+These are mostly outdated now. Could still try the "Pirate-Loader" console app and "Parallel cable and ISE", but the rest I'm not sure about...
+
+*   Originally I was planning to use "Pirate-Loader", because I wasn't sure if I could find a reliable source for the "ds30 Loader GUI", but it turns out it is in `BPv3.XSVFplayer.v1.1.zip`.
+    *   Below are my original notes for when I was going to try "Pirate-Loader" (which was surprisingly hard to find a trustworthy direct link for)...
+    *   There's a utility called [ds30 Loader](https://picbootloader.com/forum/showthread.php?tid=508) which is apparently the original inspiration, and it is the [GUI documented here](http://dangerousprototypes.com/docs/Ds30_Loader_GUI#Step_2._Load_the_firmware).
+    *   I'm suspicious of it, however, as trying to find a download for it lead me around in circles for a while.
+    *   The ["Pirate-Loader" console app](http://dangerousprototypes.com/docs/Pirate-Loader_console_upgrade_application_(GNU/Linux,_Mac,_Windows)) is [documented maybe a bit better](http://dangerousprototypes.com/blog/2010/01/19/bus-pirate-bootloader-v4-console-for-linux-mac/) and perhaps better-documented, so I might try that.
+    *   Hopefully this is what I want: https://github.com/DangerousPrototypes/Bus_Pirate/tree/master/package/BPv3-firmware -- see `pirate-loader.exe` in there.
+    *   It seems `pirate-loader.zip` or similar, containing `pirate-loader.exe`, can be found:
+        1.  [here](http://dangerousprototypes.com/forum/index.php?topic=250.msg1919#msg1919);
+        2.  [here](https://storage.googleapis.com/google-code-archive-downloads/v2/code.google.com/the-bus-pirate/pirate-loader.zip) ([ref](https://code.google.com/archive/p/the-bus-pirate/downloads?page=2));
+        3.  and maybe [here](https://github.com/DangerousPrototypes/Bus_Pirate/tree/master/BPv4-bootloader/pirate-loader).
 *   [This ("JTAG cables")](http://dangerousprototypes.com/docs/Xilinx_XC9500XL_CPLD_quick_start#JTAG_cables) says to use "Parallel cable and ISE" or "FT2232 JTAG". Not sure whether either of these means USB Blaster or DP Bus Blaster.
 *   [This ("Loaders")](http://dangerousprototypes.com/docs/Xilinx_XC9500XL_CPLD_quick_start#Loaders) says that (X)SVF files contain the CPLD configuration and it can be "played" via JTAG cable, with suggestions to use either:
     *   [UrJTAG](http://urjtag.sourceforge.net/) - load SVF with a number of programmers, including common FT2232 programmers
     *   [OpenOCD](http://www.openocd.org/) - detects FPGA/CPLDs, but doesn't do much with them.
+*   There are evidently two different versions of `BPXSVFPlayer` which report as "`BusPirate XSVF Player V.01`":
+    *   There's the one we have from extracting `BPv3.XSVFplayer.v1.1.zip` above. It **lacks** [the `-x` and `-r` options](http://dangerousprototypes.com/docs/Bus_Pirate_JTAG_XSVF_player#:~:text=-x,Reset).
+    *   There's [one in here](https://github.com/DangerousPrototypes/dangerous-prototypes-open-hardware/tree/00a5b7dd2eb80c2cdc30e2d843f403626b0553d8/Bus_Pirate/scripts/BPXSVFPlayer/package) which [includes `-x` and `-r`](https://github.com/DangerousPrototypes/dangerous-prototypes-open-hardware/blob/00a5b7dd2eb80c2cdc30e2d843f403626b0553d8/Bus_Pirate/scripts/BPXSVFPlayer/main.c#L69-L70). When I run that version with `-x`, I get:
+    ```
+    D:\FPGA\BPv3.XSVFplayer.v1.1>BPXSVFplayerV01a.exe -p COM13 -x
+    -----------------------------------------------------------------------------
 
-...TBC...
+     BusPirate XSVF Player V.01
+     http://www.dangerousprototypes.com
+
+    -----------------------------------------------------------------------------
+     Performing Chain Scan..
+     Waiting for a chain scan reply
+     Chain Scan Result: 04 93 40 60 59
+    ```
+    The JTAG `IDCODE` value here is (I think) `0x59604093`. Xilinx information about this code can be found [here](https://www.xilinx.com/support/answers/8265.html), and while it's a little screwed up, the `xc9500xl.zip` BSDL file from Xilinx contains `xc9572xl_vq44.bsd` which contains this information:
+    ```
+    attribute IDCODE_REGISTER of xc9572xl_vq44: entity is
+            "XXXX" &               -- version
+            "1001011000000100" &    -- part number
+            "00001001001" &         -- manufacturer's id
+            "1";                    -- required by standard
+    ```
+    ...so our value of `0x59604093`, in this format, comprises:
+    | Bits   | Field |
+    |-|-|
+    | `0101`             | Version (i.e. 5; stepping 5?) |
+    | `1001011000000100` | Part number (`0x9604`), but made up of `1001011` (family code; `0x4B` or 75) and `000000100` (part size) |
+    | `00001001001`      | MFR ID (`0x49` or 73); identifies Xilinx [in the JEDEC list](http://www.softnology.biz/pdf/JEP106AV.pdf#page=7) (see also [here](http://www.idhw.com/textual/chip/jedec_spd_man.html)) |
+    | `1`                | Required by standard |
 
 ## Notes
 
@@ -116,6 +278,7 @@ These notes are half-baked:
 *   Use BP to get to know how to control various modules, inc. via various serial protocols, and then make sure we can make the XC95 do the same: A good test to verify that the devices work before trying to prove we can do Verilog properly. Will help weed out programming mistakes, hardware faults, and general mishaps.
 BP will come in handy later when trying to do tests of my CPLD code/circuits.
 *   [This](http://dangerousprototypes.com/docs/XC9572XL_CPLD_dev-board_introduction#Overview) says "[5volts max](http://dangerousprototypes.com/docs/XC9572XL_CPLD_dev-board_introduction#:~:text=5volts%20max)" for `V+`. I'm sure it would take more, but don't push it. It's pretty tiny!
+*   SVF is the standard format. XSVF is [Xilinx' own compressed format](http://www.xilinx.com/support/documentation/application_notes/xapp058.pdf). See also: http://dangerousprototypes.com/docs/JTAG_SVF_to_XSVF_file_converter
 
 ## Improvements for my next XC9572XL board
 
