Notes re CPLD clock tests

--- a/0028-2020-06-09.md
+++ b/0028-2020-06-09.md
@@ -44,4 +44,37 @@
 *   I need some sort of breakout that shows the state of all IO pins as LEDs. SMT assembly from JLC? PTH LED bars that I already have?
 *   In next version of breakout board, do better refs/naming/placement of LEDs and buttons. Maybe space for more LEDs, too. They don't have to be populated, remember.
 *   Check out: https://www.xilinx.com/support/answers/3122.html
-*   There are lots of little examples, now, in [`test03`](https://github.com/algofoogle/sandpit/tree/master/fpga/XC9572XL/test03). They just need ISE projects made, etc.
+*   There are lots of little examples, now, in [`test03`](https://github.com/algofoogle/sandpit/tree/fb17e4ad5422ae0667a7510ba713cb39aff6a90a/fpga/XC9572XL/test03). I then made a project for each one, synthesized them, created iMPACT projects (`.ipf` files), and produced `output/test03*.xsvf` files. The final state with all of those can be found [here](https://github.com/algofoogle/sandpit/tree/f33d0358548745e668be210acbe1dd5a4e81502c/fpga/XC9572XL/test03).
+
+NOTE: When wiring up the JTAG header to the BP, use [these connections](http://dangerousprototypes.com/docs/Bus_Pirate_JTAG_XSVF_player#Connections), i.e.:
+
+| Bus Pirate | Dir | JTAG |
+|-|-|-|
+| CS   | &rarr;   | TMS |
+| MOSI | &rarr;   | TDI |
+| MISO | &larr;   | TDO |
+| CLK  | &rarr;   | TCK |
+| GND  | &#x23da; | GND |
+| 3V3  | &#x2191; VCC | 3V3 (or VTG) |
+
+## Success!
+
+All of my [`test03`](https://github.com/algofoogle/sandpit/tree/master/fpga/XC9572XL/test03) experiments worked on my XC9572XL-7-VQ64 board. They demonstrate `assign`s with wires, generic `always` blocks, and actual register latching with `always @(negedge ...)`.
+
+By doing `md5sum t03?/output/test03?.xsvf | sort` I was able to verify that some designs synthesized to exactly the same configuration:
+
+*   [`A`](https://github.com/algofoogle/sandpit/blob/master/fpga/XC9572XL/test03/t03a/test03a.v) is the same as [`C`](https://github.com/algofoogle/sandpit/blob/master/fpga/XC9572XL/test03/t03c/test03c.v) (hard setting LEDs: `wire`; vs `always`)
+*   [`F`](https://github.com/algofoogle/sandpit/blob/master/fpga/XC9572XL/test03/t03f/test03f.v) is the same as [`G`](https://github.com/algofoogle/sandpit/blob/master/fpga/XC9572XL/test03/t03g/test03g.v) (LEDs following buttons: separate `always` blocks vs. combined `always` block)
+
+I soldered a 50MHz XO (Crystal Oscillator) in order to do some clocked/sequential tests. It feeds GCK3 (FB1-14).
+
+I got [`test04a`](https://github.com/algofoogle/sandpit/blob/master/fpga/XC9572XL/test04/t04a/test04a.v) working which shows a counter in action.
+
+I'm having trouble with `test04b` because my logic is [not properly working with inverting the button logic](https://github.com/algofoogle/sandpit/blob/23d20a44d10f4152689e2b3657874f98726834ad/fpga/XC9572XL/test04/t04b/test04b.v#L30-L32). I've tried this a few different ways but the result is the same whether I use `!` logical inversions or not: The CPLD board behaves as though both buttons are being held when neither is being held.
+
+## What next?
+
+*   See if I can work out what's wrong with `test04b`. Maybe I need to deliberately muck up the logic and see what happens? Or try all 4 button state combinations? Maybe it needs more `wire` definitions?
+*   Next stuff with fpga4fun speaker.
+*   NOTE: Most of FB1 is mislabeled in the silkscreen! Fix it.
+
