0028: Finishing off re test03 and test04

--- a/0028-2020-06-09.md
+++ b/0028-2020-06-09.md
@@ -13,7 +13,7 @@
     *   Our LEDs are on `FB1-2` (pin 8) and `FB2-17` (pin 7).
     *   [xc9572xl_vq64.bsd](files/0021/xc9572xl_vq64.bsd) *sort of implies* that these respectively would be known internally as `PB00_01` and `PB01_16`. It appears there are no `FB*-1` pins named on the package, in the [datasheet](https://www.xilinx.com/support/documentation/data_sheets/ds057.pdf#page=6). The datasheet naming of the pins doesn't match the BSDL. The TQ100 package *does* range from `FB1-1` up to `FB1-18`, though.
     *   The BSDL also does imply that `PB00_01` is `P8` and `PB01_16` is `P7`.
-*   So, I'm not sure why my code targeting the XC9572XL-7-VQ64 seemed to leave the LEDs in a state where the LEDs were dim. They were probably dim due to WPUs (weak pull-ups), but shouldn't they have had some value assigned from reset? Need to try some direct `assign`s instead, and test the theory on both the VQ44 and VQ64.
+*   So, I'm not sure why my code targeting the XC9572XL-7-VQ64 seemed to leave the LEDs in a state where the LEDs were dim. They were probably dim due to WPUs (weak pull-ups, aka `KPR` or "Keeper" pull-ups that apply by default to unused pins), but shouldn't they have had some value assigned from reset? Need to try some direct `assign`s instead, and test the theory on both the VQ44 and VQ64.
 *   Interesting info re BSDL [here](https://bsdl.info/details.htm?sid=e596df5721e3e10b88ca59b002289d77).
 *   Learn how to do simulation and timing analysis to make sure I understand Verilog correctly.
 *   I wonder if the problem is that iMPACT (or the synthesis step) didn't use my UCF. Does the report show what pins it used? I've noticed that [`test02.gyd`](https://github.com/algofoogle/sandpit/blob/4f4f00a3cd828e72d31a7270c61331c71f32281d/fpga/XC9572XL/test02/test02.gyd#L3) (a "[guide file](https://www.xilinx.com/support/answers/1270.html)") contains this:
@@ -70,11 +70,44 @@ I soldered a 50MHz XO (Crystal Oscillator) in order to do some clocked/sequentia
 
 I got [`test04a`](https://github.com/algofoogle/sandpit/blob/master/fpga/XC9572XL/test04/t04a/test04a.v) working which shows a counter in action.
 
-I'm having trouble with `test04b` because my logic is [not properly working with inverting the button logic](https://github.com/algofoogle/sandpit/blob/23d20a44d10f4152689e2b3657874f98726834ad/fpga/XC9572XL/test04/t04b/test04b.v#L30-L32). I've tried this a few different ways but the result is the same whether I use `!` logical inversions or not: The CPLD board behaves as though both buttons are being held when neither is being held.
+I was having trouble with `test04b`. Initially I made a mistake where I forgot about the inverted button logic (i.e. pressed is low). The design was otherwise working. I flipped the logic of each button, but it didn't appear to change the behaviour after I built a new XSVF and programmed it to the board. In fact, none of my attempts to fix the problem seemed to work. I started doing MD5 checksums of each `.xsvf` file and I found they were always the same. In the end, though, I think it was more of a process issue than a code issue:
+
+1.  The ISE "Play" button means "Implement Top Module".
+2.  This seems to go through the first 4 "Implement Design" processes, which produces a `.jed` file.
+3.  Processes don't seem to run again unless ISE *determines* they need to be run because something gets updated.
+4.  I think because of something to do with the VirtualBox host share setup, the `.jed` file might've been getting a timestamp set in the future.
+5.  Whatever the case, ISE was not successfully writing an updated `.jed` file.
+6.  Hence, no matter what I did to the code or whether I tried to force it to synthesize it again in full or not, the `.jed` file was remaining outdated, and this was being fed into iMPACT to produce an also-outdated `.xsvf` file.
+7.  I found I could usually get arond this by deleting the `.jed` file and then synthesizing again, but I also got this situation recently:
+    ```
+    WARNING:ProjectMgmt - File /home/ise/shared_projects/sandpit/fpga/XC9572XL/test04/t04b/working/test04b.jed is missing.
+    ```
+    In that case, I was able to right-click on "Generate Programming File" and select "Run", which made the `.jed` file.
+8.  Between builds, I would check the `md5sum` output of both the `.jed` and `.xsvf` files to ensure they had changed.
+
+So, the [`test04b`](https://github.com/algofoogle/sandpit/blob/master/fpga/XC9572XL/test04/t04b/test04b.v) code now works.
+
+NOTE: When using iMPACT to record the programming of the core, the output XSVF will be different before and after using the `Output => XSVF File => Stop` option. It could be that using this "Stop" will do the necessary cleanup/reset steps that cause the target device to restart, and omitting this step might be why sometimes I've seen it go to a hung state after programming instead.
+
+NOTE: I found in some situations that when launching iMPACT, and it auto-opens the prior project, the "Assign configuration file" menu option is missing, and hitting its usual <kbd>CTRL+G</kbd> combo once does nothing, and the 2nd time causes iMPACT to crash.
+
+NOTE: For future reference, this is the command I'm using to program `test04b` to the CPLD:
+
+```batch
+pushd C:\Users\admin\Documents\shared_projects\sandpit\fpga\BPv3.XSVFplayer.v1.1
+BPXSVFplayerV01a.exe -p COM13 -x -f "..\XC9572XL\test04\t04b\output\test04b.xsvf"
+```
 
 ## What next?
 
-*   See if I can work out what's wrong with `test04b`. Maybe I need to deliberately muck up the logic and see what happens? Or try all 4 button state combinations? Maybe it needs more `wire` definitions?
-*   Next stuff with fpga4fun speaker.
-*   NOTE: Most of FB1 is mislabeled in the silkscreen! Fix it.
-
+*   Make a start on the [fpga4fun.com tutorials](https://www.fpga4fun.com/MusicBox.html).
+*   Start planning improvements to the CPLD board. Ideas include:
+    *   Most of FB1 is mislabeled in the silkscreen! Fix it.
+    *   Design XO placement better, and maybe use an RS232-compatible frequency.
+    *   Protection diode.
+    *   Some dedicated pins with built-in 1k&ohm; series resistors to avoid overcurrent; i.e. would limit to 3.3mA on a dead short.
+*   Try fixing `pace_old`, because it probably has lots of handy features about voltage levels, etc, for which I don't otherwise know the UCF config (but I suppose I could learn by carefully studying the [Constraints Guide](https://china.xilinx.com/support/documentation/sw_manuals/xilinx14_7/cgd.pdf)). Make a snapshot of the VM first.
+*   Make a better cable to connect the BP directly to the JTAG header.
+*   Learn how to do simulations in ISE.
+*   Make a core that tests each pin in turn, in the order seen on the edge connectors. See if it's possible to make an SVF that slowly does the same using pure JTAG.
+*   See if it's possible to link the ISE VM directly to the Bus Blaster for programming the XC9572XL. Apparently it is possible (though slow) using a special driver. For more info, see: http://dangerousprototypes.com/forum/index.php?topic=3588.0
