0029: Update re XC95 test05e

--- a/0029-2020-06-15.md
+++ b/0029-2020-06-15.md
@@ -29,6 +29,11 @@
     *   Plays a tone that ramps up and down from about 766Hz to 1526Hz, at about 3Hz.
     *   Now it's [prescaling the clock in the top module](https://github.com/algofoogle/sandpit/blob/18c67f921a29d39039882ef256f2d6752a34288f/fpga/XC9572XL/test05/t05d/test05d.v#L10-L12).
     *   It works!
+*   Made [`test05e`](https://github.com/algofoogle/sandpit/blob/master/fpga/XC9572XL/test05/t05e):
+    *   Last part of [tutorial part 2](https://www.fpga4fun.com/MusicBox2.html).
+    *   Plays a tone that ramps up and down from about 766Hz to 1526Hz, at about 3Hz for 16 up/down cycles, and then at about 1/8th the speed for 2 up/down cycles.
+    *   Also, the right-hand button will force slow mode.
+    *   It works!
 
 ## Notes
 
